--- a/Client/index.html
+++ b/Client/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>jQuery AJAX POST Form</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -25,7 +26,36 @@
     <button type="submit">Submit</button>
 </form>
 
-<div id="MovieList"></div>
+<div class="Container">
+    <div id="MovieList">
+        <table  class="table table-hover">
+            <thead>
+                <th>Title</th><th>Year</th>
+            </thead>
+            <tbody>
+                <tr data-toggle="collapse" data-target="#accordion" class="clickable collapse-row collapsed">
+                    <td id="movieTitle"></td>
+                    <td id="movieYear"></td>
+                </tr>
+                <tr>
+                    <td colspan="3">
+                        <div id="accordion" class="collapse">Movie Details <br></br> <button type="button" class="btn btn-primary">Edit</button></div>
+                    </td>
+                </tr>
+                <tr data-toggle="collapse" data-target="#accordion2" class="clickable">
+                    <td>Some Stuff</td>
+                    <td>Some more stuff</td>
+                    <td>And some more</td>
+                </tr>
+                <tr>
+                    <td colspan="6">
+                        <div id="accordion2" class="collapse">Hidden by default</div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
 
 </body>
