Added form to index.html for creating a movie

--- a/Client/index.html
+++ b/Client/index.html
@@ -15,7 +15,30 @@
 
 
 
+    <form>
+        <div class="form-row">
+          <div class="form-group col-md-2">
+            <label for="inputTitle">Title</label>
+            <input type="text" class="form-control" id="inputTitle" placeholder="Enter Movie title....">
+          </div>
+          <div class="form-group col-md-2">
+            <label for="inputDirector">Director</label>
+            <input type="text" class="form-control" id="inputDirector" placeholder="Enter Director Name....">
+          </div>
+        </div>
 
+        <div class="form-row">
+            <div class="form-group col-md-2">
+              <label for="inputGenre">Genre</label>
+              <input type="text" class="form-control" id="inputGenre" placeholder="Enter A Genre....">
+            </div>
+            <div class="form-group col-md-2">
+              <label for="inputYear">Year</label>
+              <input type="text" class="form-control" id="inputYear" placeholder="Enter Year Movie Was Released....">
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
 <div class="container">
     <div id="MovieList">
