--- a/Client/index.html
+++ b/Client/index.html
@@ -12,36 +12,44 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+  <div id="response">
+    <pre></pre>
+</div>
+  
 
 
+<div class="container ">
+  <div class="row">
+    <div class="col-md-4"></div>
+  <button id="createMovieButton" class="btn btn-primary btn-block col-md-4 align-items-center ">Create A Movie</button>
+  <div class="col-md-4"></div>
+  <form  method="POST" name="createMovie" id="createMovie">
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="title">Title</label>
+          <input type="text" class="form-control" id="title" placeholder="Enter Movie title....">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="director">Director</label>
+          <input type="text" class="form-control" id="director" placeholder="Enter Director Name....">
+        </div>
+      </div>
 
-    <form>
-        <div class="form-row">
-          <div class="form-group col-md-2">
-            <label for="inputTitle">Title</label>
-            <input type="text" class="form-control" id="inputTitle" placeholder="Enter Movie title....">
+      <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="genre">Genre</label>
+            <input type="text" class="form-control" id="genre" placeholder="Enter A Genre....">
           </div>
-          <div class="form-group col-md-2">
-            <label for="inputDirector">Director</label>
-            <input type="text" class="form-control" id="inputDirector" placeholder="Enter Director Name....">
+          <div class="form-group col-md-6">
+            <label for="year">Year</label>
+            <input type="text" class="form-control" id="year" placeholder="Enter Year....">
           </div>
         </div>
-
-        <div class="form-row">
-            <div class="form-group col-md-2">
-              <label for="inputGenre">Genre</label>
-              <input type="text" class="form-control" id="inputGenre" placeholder="Enter A Genre....">
-            </div>
-            <div class="form-group col-md-2">
-              <label for="inputYear">Year</label>
-              <input type="text" class="form-control" id="inputYear" placeholder="Enter Year Movie Was Released....">
-            </div>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-
-<div class="container">
+        <button type="submitMovie" class="btn btn-primary">Submit</button>
+  </form>
+</div>
     <div id="MovieList">
+      
         <table id="my_table" class="table table-hover">
             <thead>
                 <th>Title</th><th>Year</th>
