Added images folder, added image to top of page

--- a/Client/index.html
+++ b/Client/index.html
@@ -16,6 +16,11 @@
 
 
 <div class="container ">
+
+  <div class="row ">
+  <img src="./Images/ticket.png" class="rounded mx-auto d-block mb-4 mt-4" alt="Movie Ticket">
+  </div>
+
   <div class="row">
     <div class="col-md-4"></div>
   <button id="createMovieButton" class="btn btn-primary btn-block col-md-4 align-items-center ">Create A Movie</button>
