Changed Image Header

--- a/Client/index.html
+++ b/Client/index.html
@@ -18,7 +18,7 @@
 <div class="container ">
 
   <div class="row ">
-  <img src="./Images/ticket.png" class="rounded mx-auto d-block mb-4 mt-4" alt="Movie Ticket">
+  <img src="./Images/Banner2.png" class="rounded mx-auto d-block mb-4 mt-4" alt="Movie Ticket">
   </div>
 
   <div class="row">
