--- a/Client/index.html
+++ b/Client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>jQuery AJAX POST Form</title>
+    <title>The Samarium Movie Gallery</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -14,11 +14,11 @@
 
   
 
-
+<body>
 <div class="container ">
 
   <div class="row ">
-  <img src="./Images/Banner2.png" class="rounded mx-auto d-block mb-4 mt-4" alt="Movie Ticket">
+  <img src="./Images/Banner2.png" class="rounded mx-auto d-block mb-4 mt-4" alt="Movie Ticket" width="100%">
   </div>
 
   <div class="row">
@@ -71,6 +71,25 @@
             </tbody>
         </table>
     </div>
+</div>
+
+<div class="modal" id="movieModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Movie Details</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Modal body text goes here.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 
