--- a/Client/index.html
+++ b/Client/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>jQuery AJAX POST Form</title>
+    <title>Movie Titles</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
+
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./app.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
+<body id="body">
 
 
 
@@ -19,7 +19,7 @@
         <div class="form-row">
           <div class="form-group col-md-2">
             <label for="inputTitle">Title</label>
-            <input type="text" class="form-control" id="inputTitle" placeholder="Enter Movie title....">
+            <input type="text" class="form-control" id="inputTitle" name="title" placeholder="Enter Movie title....">
           </div>
           <div class="form-group col-md-2">
             <label for="inputDirector">Director</label>
@@ -41,9 +41,6 @@
     </form>
 
 <div class="container">
-<<<<<<< HEAD
-    <div id="MovieList">
-=======
     <div id="MovieList">
         <table id="my_table" class="table table-hover">
             <thead>
@@ -65,7 +62,47 @@
     </div>
 </div>
 
+<div id="movieForm">
+    
+</div>
+
+
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true" >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalLabel">Edit</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <!-- <form id="updateForm">
+                <div class="form-group">
+                  <label for="titleform">Title:</label>
+                  <input type="title" class="form-control" placeholder="Enter title" id="titleForm">
+                </div>
+                <div class="form-group">
+                  <label for="directform">Director:</label>
+                  <input type="director" class="form-control" placeholder="Enter director" id="directForm">
+                </div>
+                <div class="form-group">
+                    <label for="genreform">Genre:</label>
+                    <input type="genre" class="form-control" placeholder="Enter genre" id="genreForm">
+                  </div>
+                  <div class="form-group">
+                    <label for="yearform">Year:</label>
+                    <input type="year" class="form-control" placeholder="Enter year" id="yearForm">
+                  </div>
+                <button id="updateMovie" type="submit" class="btn btn-primary">Submit</button>
+              </form> -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
->>>>>>> 53818a4be0778a9cad2c020e8fc98bdb2312b4d0
