Edit form had a hidden field for imageURL that was no longer necessary.

--- a/Client/index.html
+++ b/Client/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>jQuery AJAX POST Form</title>
+    <title>The Samarium Movie Gallery</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./app.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
-  
-
-
+<body>
 <div class="container ">
-
   <div class="row ">
-  <img src="./Images/Banner2.png" class="rounded mx-auto d-block mb-4 mt-4" alt="Movie Ticket">
+  <img src="./Images/Banner2.png" class="rounded mx-auto d-block mb-4 mt-4" alt="Movie Ticket" width="100%">
   </div>
-
   <div class="row">
     <div class="col-md-4"></div>
   <button id="createMovieButton" class="btn btn-primary btn-block col-md-4 align-items-center ">Create A Movie</button>
@@ -36,7 +30,6 @@
           <input type="text" class="form-control" id="director" placeholder="Enter Director Name....">
         </div>
       </div>
-
       <div class="form-row">
           <div class="form-group col-md-6">
             <label for="genre">Genre</label>
@@ -47,30 +40,67 @@
             <input type="text" class="form-control" id="year" placeholder="Enter Year....">
           </div>
         </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="ImageURL">Image Url</label>
-            <input type="text" class="form-control" id="ImageURL" placeholder="Enter URL....">
-          </div>
-        </div>
         <button type="submitMovie" class="btn btn-primary">Submit</button>
-  </form>
-</div>
-   <!--  <div id="MovieList">
-      
+    </form>
+    </div>
+    <div class="container" id="MovieList">
         <table id="my_table" class="table table-hover">
             <thead>
                 <th>Title</th><th>Year</th>
             </thead>
-            <tbody id= "movieList1" > 
-              
+            <tbody id= "movieList1" >
+                <tr>
+                    <td colspan="3">
+                        <div id="accordion" class="collapse">Movie Details <br></br> <button type="button" class="btn btn-primary">Edit</button></div>
+                    </td>
+                </tr>
             </tbody>
         </table>
-    </div> -->
-  
-</div><!--container-->
+    </div>
+</div>
+<div id="movieForm">
+</div>
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true" >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalLabel">Edit</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
 
-
+        <form method="POST" id="updateForm">
+  <div class="modal-body">
+    <script type="text/javascript">
+        function form_submit() {
+      document.getElementById("updateForm").submit();
+    }    
+    </script>
+</div>
+</form>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+<div class="modal" id="movieModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Movie Details</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
-
