Added imageurl to create

--- a/Client/index.html
+++ b/Client/index.html
@@ -40,6 +40,12 @@
             <input type="text" class="form-control" id="year" placeholder="Enter Year....">
           </div>
         </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="ImageURL">Image URL</label>
+            <input type="text" class="form-control" id="ImageURL" placeholder="Enter URL....">
+          </div>
+        </div>
         <button type="submitMovie" class="btn btn-primary">Submit</button>
     </form>
     </div>
